# granita

./: .gitignore  LICENSE  README.md  pyproject.toml
granita/: __init__.py  __main__.py  config.py  granita.config.json  transform.py
granita/init/pages/: index.md
granita/init/static/: index.css
granita/init/templates/: index.html
